src/test/deca/syntax/valid/expr/test_expr_or.deca
// Description:
//    test de programme syntaxiquement correct
//
// Resultats:
//    Ligne 13: no viable alternative at input 'a'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a == 0 || a == 2){
        a = 1;
    }
}