src/test/deca/syntax/invalid/decl_field/test_decl_field_without_name.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// no viable alternative at input 'int;
// Historique:
//    cree le 01/01/2024

class A {   
    int ;
}
